# polaris

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  conversation-memory.md  docker-compose.yml  milestones.md  prd.md  workflow.md
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0f1e2d3c4b5a_create_evaluation_tables.py  4c0790a50ea2_add_conversation_memory_state.py  7b4f6d8c2a10_create_reliability_data_model.py  8d2f4a6b7c90_create_user_login_events.py  9a1d2c3e4f50_add_message_metadata.py  a2b7c8d9e010_create_agent_observability_tables.py  (+7 more)
apps/api/app/: __init__.py  config.py  database.py  exceptions.py  main.py
apps/api/tests/: test_admin_routes.py  test_alembic_migrations.py  test_auth_routes.py  test_auth_service.py  test_chat.py  test_config.py  test_context_builder.py  test_conversation_chat_service.py  test_conversation_progress_stream.py  test_daily_reliability_import_service.py  test_data_browser.py  test_deepseek_provider.py  test_defect_elimination_agent.py  test_evaluation_service.py  test_feedback_routes.py  test_maintenance_strategy_agent.py  test_master_data_agent.py  test_model_selection.py  test_notification_delivery.py  test_openrouter_provider.py  test_reliability_agent_orchestrator.py  test_reliability_data_model.py  test_reliability_improvement_agent.py  test_reliability_seed_loader.py  test_run_scheduled_review_cli.py  test_scheduled_review_models.py  test_scheduled_review_report_builder.py  test_scheduled_review_service.py  test_specialist_registry.py
apps/web/: README.md  (+3 more)
(+123 files in other folders)
