[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris-api"
version = "0.1.0"
description = "FastAPI backend for Polaris, the Open Reliability reliability engineering workspace."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["app*"]
